--- a/about_us.html
+++ b/about_us.html
@@ -71,7 +71,7 @@
     <div class="row">
         <div class="col-sm-6 col-sm-offset-3 text-center m-t-50">
             <h2 class="text-center heading underline">关于迈威</h2>
-            <p>迈威国际是一家专注于中小学孩子的德智体美全面发展的专业机构。</p>
+            <p style="font-size: 13px;">About Us</p>
         </div>
     </div>
     <div class="row m-t-50">
