--- a/blog.html
+++ b/blog.html
@@ -70,6 +70,7 @@
             <div class="row">
                 <div class="col-md-8 col-xs-12 section-top-25">
                     <h2 class="text-white text-center heading2 underline2">公司理念</h2>
+                    <p class="text-center" style="font-size: 13px;">Company philosophy</p>
                     <p class="text-white text-justify section-top-25">　　迈威国际和日本，台湾等多家专业机构合作，全力打造出适合中小学的阶段孩子的课外课后活动，旨在培养孩子的身体素质，动手能力，交流能力，提高孩子的文化水平，艺术水平，使孩子能够在接受教育的黄金时段做到德智体美全面发展！</p>
                     <p class="text-center"><a href="javascript:void(0)" class="btn btn-danger btn-md section-top-align" style="opacity: 0; cursor: default"> </a></p>
                 </div>
