--- a/careers.html
+++ b/careers.html
@@ -68,48 +68,10 @@
     <div class="row">
         <div class="col-xs-12 m-t-50">
             <h2 class="heading underline">师资力量</h2>
-            <p class="text-center">Always keep your portfolio and your risk at your own individual comfortable sleeping
-                point.</p>
+            <p class="text-center" style="font-size: 13px;">Always keep your portfolio and your risk at your own individual comfortable sleeping point.</p>
         </div>
     </div>
-    <div class="row m-t-50">
-        <div class="col-sm-4 col-md-2 col-xs-6">
-            <div class="careers_we_can_do bg-success text-center">
-                <i class="fa fa-laptop fa-4x text-white" aria-hidden="true"></i>
-            </div>
-            <h6 class="text-center">Consulting</h6>
-        </div>
-        <div class="col-sm-4 col-md-2 col-xs-6">
-            <div class="careers_we_can_do bg-success text-center">
-                <i class="fa fa-desktop text-white fa-4x" aria-hidden="true"></i>
-            </div>
-            <h6 class="text-center">Web Design</h6>
-        </div>
-        <div class="col-sm-4 col-md-2 col-xs-6">
-            <div class="careers_we_can_do bg-success text-center">
-                <i class="fa fa-android text-white fa-4x" aria-hidden="true"></i>
-            </div>
-            <h6 class="text-center">Android Apps</h6>
-        </div>
-        <div class="col-sm-4 col-md-2 col-xs-6">
-            <div class="careers_we_can_do bg-success text-center">
-                <i class="fa fa-windows fa-4x text-white" aria-hidden="true"></i>
-            </div>
-            <h6 class="text-center">Windows Apps</h6>
-        </div>
-        <div class="col-sm-4 col-md-2 col-xs-6">
-            <div class="careers_we_can_do bg-success text-center">
-                <i class="fa fa-apple fa-4x text-white" aria-hidden="true"></i>
-            </div>
-            <h6 class="text-center">IOS Apps</h6>
-        </div>
-        <div class="col-sm-4 col-md-2 col-xs-6">
-            <div class="careers_we_can_do bg-success text-center">
-                <i class="fa fa-html5 fa-4x text-white" aria-hidden="true"></i>
-            </div>
-            <h6 class="text-center">HTML5 </h6>
-        </div>
-    </div>
+    <div class="row m-t-50"></div>
 </div>
 <section class="careers_bg parallax m-t-50 section-bottom-pad-40">
     <div class="container">
@@ -137,224 +99,11 @@
                             </div>
                         </div>
                     </div>
-
-
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="careers_border_top">
-                            <div class="row">
-                                <div class="col-xs-2  section-top-15 section-bottom-15">
-                                    <img src="images/team_leader.png" class="img-responsive" alt="html-icon">
-                                </div>
-                                <div class="col-xs-10">
-                                    <h4><a href="apply_job.html">Project Team Leader ( Experienced )</a></h4>
-                                    <p class="text-white">Last Date to Apply: &nbsp;15.02.2017 &nbsp;&nbsp; | &nbsp; <i
-                                            class="fa fa-money" aria-hidden="true"></i> &nbsp; $ 725 Per Month </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="careers_border_top">
-                            <div class="row">
-                                <div class="col-xs-2  section-top-15 section-bottom-15">
-                                    <img src="images/seo.png" class="img-responsive" alt="html-icon">
-                                </div>
-                                <div class="col-xs-10">
-                                    <h4><a href="apply_job.html">SEO / SEM Expert ( Fresher / Experienced )</a></h4>
-                                    <p class="text-white">Last Date to Apply: &nbsp;04.02.2017 &nbsp;&nbsp; | &nbsp; <i
-                                            class="fa fa-money" aria-hidden="true"></i> &nbsp; $ 400 Per Month </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="careers_border_top">
-                            <div class="row">
-                                <div class="col-xs-2  section-top-15 section-bottom-15">
-                                    <img src="images/wordpress.png" class="img-responsive" alt="html-icon">
-                                </div>
-                                <div class="col-xs-10">
-                                    <h4><a href="apply_job.html">Wordpress Developer ( Fresher / Experienced )</a></h4>
-                                    <p class="text-white">Last Date to Apply: &nbsp;04.02.2017 &nbsp;&nbsp; | &nbsp; <i
-                                            class="fa fa-money" aria-hidden="true"></i> &nbsp; $ 620 Per Month </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="careers_border_top">
-                            <div class="row">
-                                <div class="col-xs-2  section-top-15 section-bottom-15">
-                                    <img src="images/big_data.png" class="img-responsive" alt="html-icon">
-                                </div>
-                                <div class="col-xs-10">
-                                    <h4><a href="apply_job.html">Big Data analytics ( Experienced )</a></h4>
-                                    <p class="text-white">Last Date to Apply: &nbsp;28.01.2017 &nbsp;&nbsp; | &nbsp; <i
-                                            class="fa fa-money" aria-hidden="true"></i> &nbsp; $ 1150 Per Month </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="careers_border_top">
-                            <div class="row">
-                                <div class="col-xs-2  section-top-15 section-bottom-15">
-                                    <img src="images/project_manager.png" class="img-responsive" alt="html-icon">
-                                </div>
-                                <div class="col-xs-10">
-                                    <h4><a href="apply_job.html">Project Manager ( Experienced )</a></h4>
-                                    <p class="text-white">Last Date to Apply: &nbsp;04.02.2017 &nbsp;&nbsp; | &nbsp; <i
-                                            class="fa fa-money" aria-hidden="true"></i> &nbsp; $ 1050 Per Month </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row ">
-                    <div class="col-xs-12">
-                        <div class="careers_border_top careers_border_bottom">
-                            <div class="row">
-                                <div class="col-xs-2  section-top-15 section-bottom-15">
-                                    <img src="images/hr.png" class="img-responsive" alt="html-icon">
-                                </div>
-                                <div class="col-xs-10">
-                                    <h4><a href="apply_job.html">HR recruiter ( Experienced )</a></h4>
-                                    <p class="text-white">Last Date to Apply: &nbsp;04.01.2017 &nbsp;&nbsp; | &nbsp; <i
-                                            class="fa fa-money" aria-hidden="true"></i> &nbsp; $ 710 Per Month </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4 m-t-50 col-sm-offset-1">
-                <div class="row">
-                    <div class="careers_right_links">
-                        <div class="col-xs-6 career_link_border text-center">
-                            <div class="section-top-40 section-bottom-pad-40">
-                                <a href="index.html"> <i class="fa fa-home fa-2x" aria-hidden="true"></i>
-                                    <br/>Home</a>
-                            </div>
-                        </div>
-
-                        <div class="col-xs-6 career_link_border text-center">
-                            <div class="section-top-40 section-bottom-pad-40">
-                                <a href="services.html"><i class="fa fa-folder fa-2x" aria-hidden="true"></i>
-                                    <br/>Services</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="careers_right_links">
-                        <div class="col-xs-6 career_link_border text-center">
-                            <div class="section-top-40 section-bottom-pad-40">
-                                <a href="about_us.html"><i class="fa fa-user fa-2x" aria-hidden="true"></i>
-                                    <br/>About Us</a>
-                            </div>
-                        </div>
-                        <div class="col-xs-6 career_link_border text-center">
-                            <div class="section-top-40 section-bottom-pad-40">
-                                <a href="portfolio.html"><i class="fa fa-file-image-o fa-2x" aria-hidden="true"></i>
-                                    <br/>Portfolio</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="careers_right_links">
-                        <div class="col-xs-6 career_link_border text-center">
-                            <div class="section-top-40 section-bottom-pad-40">
-                                <a href="case_studies.html"> <i class="fa fa-line-chart fa-2x" aria-hidden="true"></i>
-                                    <br/>Case Studies</a>
-                            </div>
-                        </div>
-                        <div class="col-xs-6 career_link_border text-center">
-                            <div class="section-top-40 section-bottom-pad-40">
-                                <a href="gallery.html"><i class="fa fa-picture-o fa-2x" aria-hidden="true"></i>
-                                    <br/>Gallery</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="careers_right_links">
-                        <div class="col-xs-6 career_link_border text-center">
-                            <div class="section-top-40 section-bottom-pad-40">
-                                <a href="blog.html"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i>
-                                    <br/>Blog</a>
-                            </div>
-                        </div>
-                        <div class="col-xs-6 career_link_border text-center">
-                            <div class="section-top-40 section-bottom-pad-40">
-                                <a href="products.html"> <i class="fa fa-briefcase fa-2x" aria-hidden="true"></i>
-                                    <br/>Products</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="careers_right_links">
-                        <div class="col-xs-6 career_link_border text-center">
-                            <div class="section-top-40 section-bottom-pad-40">
-                                <a href="newsroom.html"><i class="fa fa-television fa-2x" aria-hidden="true"></i>
-                                    <br/>News Room</a>
-                            </div>
-                        </div>
-                        <div class="col-xs-6 career_link_border text-center">
-                            <div class="section-top-40 section-bottom-pad-40">
-                                <a href="media.html"> <i class="fa fa-volume-up fa-2x" aria-hidden="true"></i>
-                                    <br/>Media</a>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
     </div>
     <br/>
-</section>
-
-<section class="">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 m-t-50">
-                <a href="#"><h2 class="heading underline">Our Clients</h2></a>
-                <p class="text-center">A racing tipster who only reached Hitler's level of accuracy would not do well
-                    for his clients.</p>
-            </div>
-            <div class="col-sm-4 col-md-2 col-xs-6 m-t-50">
-                <img src="images/brand1.png" class="img-responsive center-block career_brands" alt="brands">
-            </div>
-            <div class="col-sm-4 col-md-2 col-xs-6 m-t-50">
-                <img src="images/brand2.png" class="img-responsive center-block career_brands" alt="brands">
-            </div>
-            <div class="col-sm-4 col-md-2 col-xs-6 m-t-50">
-                <img src="images/brand3.png" class="img-responsive center-block career_brands" alt="brands">
-            </div>
-            <div class="clearfix visible-sm-block"></div>
-            <div class="col-sm-4 col-md-2 col-xs-6 m-t-50">
-                <img src="images/brand2.png" class="img-responsive center-block career_brands" alt="brands">
-            </div>
-            <div class="col-sm-4 col-md-2 col-xs-6 m-t-50">
-                <img src="images/brand1.png" class="img-responsive center-block career_brands" alt="brands">
-            </div>
-            <div class="col-sm-4 col-md-2 col-xs-6 m-t-50">
-                <img src="images/brand2.png" class="img-responsive center-block career_brands" alt="brands">
-            </div>
-        </div>
-
-    </div>
 </section>
 
 <div class="shape section-top-50"></div>
