--- a/contact_us.html
+++ b/contact_us.html
@@ -68,37 +68,30 @@
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3 m-t-50">
                 <h2 class="underline heading">联系我们</h2>
-                <p class="text-center">Southwest Airlines is successful because the company understands it's a customer
-                    service company. It also happens to be an airline.</p>
+                <p class="text-center">Contact Us</p>
 
             </div>
         </div>
 
-        <div class="row" style="padding-bottom: 200px;">
+        <div class="row" style="padding:163px 0 200px;">
             <div class="col-xs-12 col-sm-12">
 
-                <div class="row contact_map_gap">
-                    <div class="col-xs-12 text-justify section-top-30">
-                        <h4 class="heading_left">Vedha Corporate</h4>
-                    </div>
-                    <div class="col-xs-12 section-top-10">
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy.</p>
-                    </div>
-                </div>
                 <div class="row">
                     <div class="col-sm-6 col-lg-4 contact_mobile_number">
+                        <h5>联系电话</h5>
                         <h5>Contact details</h5>
-                        <p>Phone : <a href="#"> 9876543021</a> <br/>Fax : <a href="#"> 040 12345678</a></p>
+                        <p>Phone : <a href="#"> 9876543021</a></p>
                     </div>
                     <div class="col-sm-6 col-lg-4">
+                        <h5>联系地址</h5>
                         <h5>Our Location</h5>
-                        <p>52436 Australia<br/> Sydney, 2127, Dunblane</p>
+                        <p>成都市高新区天府大道中段666号<br/>希顿国际广场C座1703.</p>
                     </div>
 
                     <div class="col-sm-12 col-lg-4 contact_mobile_number a:focus">
+                        <h5>联系邮箱</h5>
                         <h5>Email Us</h5>
-                        <p><a href="#">info@corporate.com</a><br/><a href="#">sale@corporate.com</a></p>
+                        <p><a href="#">info@corporate.com</a></p>
                     </div>
 
                 </div>
