--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="row">
         <div class="col-sm-6 col-sm-offset-3 m-t-50">
             <h2 class="heading underline">关于迈威</h2>
-            <p class="text-center" style="font-size: 12px;">迈威国际是一家专注于中小学孩子的德智体美全面发展的专业机构。</p>
+            <p class="text-center" style="font-size: 13px;">About Us</p>
         </div>
     </div>
 
@@ -139,87 +139,68 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3 m-t-50">
-                <h2 class="heading underline">合作伙伴</h2>
-                <p class="text-center">迈威国际和来自日本、台湾、英国等地区的专业团队共同打造了适合国内中小学生德智体美全面发展的平台。</p>
+                <h2 class="heading underline">我们的产品</h2>
+                <p class="text-center" style="font-size: 13px;">Our Products</p>
             </div>
         </div>
-        <div class="row m-t-50">
-            <div class="col-sm-4">
-                <img src="images/home2_slider_layer3.png" alt="img" class="img-responsive center-block">
-            </div>
-            <div class="col-sm-4">
-                <ul class="list-unstyled">
-                    <li class="link_transition"><a href="services.html"><i class="fa fa-caret-right"></i><i class="fa fa-caret-right"></i> &nbsp;The a-project way(来自日本的体适能专业培训机构)</a></li>
-                    <li class="link_transition  section-top-10"><a href="services.html"><i class="fa fa-caret-right"></i><i class="fa fa-caret-right"></i> &nbsp;台北香颂管弦乐团</a></li>
-                    <li class="link_transition  section-top-10"><a href="services.html"><i class="fa fa-caret-right"></i><i class="fa fa-caret-right"></i> &nbsp;White horse theatre(来自英国的专业戏剧培训团)</a></li>
-                    <li class="link_transition  section-top-10"><a href="services.html"><i class="fa fa-caret-right"></i><i class="fa fa-caret-right"></i> &nbsp;台北好玩的剧团</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-4">
-                <div id="Services_Carousel" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#Services_Carousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#Services_Carousel" data-slide-to="1"></li>
-                        <li data-target="#Services_Carousel" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="item active" data-interval="3000">
-                            <figure class="imghvr-zoom-in">
-                                <img src="images/gallery2.jpg" alt="people" class="img-responsive">
-                                <figcaption>
-                                    <div class="text-center">
-
-                                        <h6 class="text-white"> Web Development</h6>
-                                        <p class="text-white">
-                                            Lorem ipsum dolor sit amet <br/>consectetuer adipiscing elit..
-                                        </p>
-
-                                        <a href="services.html" class="btn btn-success">Read more</a>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <div class="item" data-interval="3000">
-                            <figure class="imghvr-zoom-in">
-                                <img src="images/portfolio5.jpg" alt="people" class="img-responsive">
-                                <figcaption>
-                                    <div class="text-center">
-
-                                        <h6 class="text-white">Big Data & Analytics </h6>
-                                        <p class="text-white">
-                                            Lorem ipsum dolor sit amet <br/>consectetuer adipiscing elit..
-                                        </p>
-                                        <a href="services.html" class="btn btn-success">Read more</a>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <div class="item" data-interval="3000">
-                            <figure class="imghvr-zoom-in">
-                                <img src="images/newsroom3.jpg" alt="people" class="img-responsive">
-                                <figcaption>
-                                    <div class="text-center">
-
-                                        <h6 class="text-white">IT Services </h6>
-                                        <p class="text-white">
-                                            Lorem ipsum dolor sit amet <br/>consectetuer adipiscing elit..
-                                        </p>
-
-                                        <a href="services.html" class="btn btn-success">Read more</a>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
+        <div class="row section-top-10">
+            <div class="col-sm-6 section-top-25">
+                <div class="row">
+                    <div class="col-md-6 section-top-align">
+                        <figure class="imghvr-slide-up img-responsive">
+                            <img src="images/portfolio5.jpg" alt="gallery3" />
+                        </figure>
                     </div>
-                    <!-- Left and right controls -->
-                    <a class="left carousel-control" href="#Services_Carousel" role="button" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control" href="#Services_Carousel" role="button" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+                    <div class="col-md-6">
+                        <h5>体适能专业培训</h5>
+                        <hr/>
+                        <p>Lorem ipsum dolor sit amet consectetuer Lorem ipsum dolor <br/>adipiscing elit.. <a href="products.html" class="text-success"> Read more</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 section-top-25">
+                <div class="row">
+                    <div class="col-md-6 section-top-align">
+                        <figure class="imghvr-slide-up img-responsive">
+                            <img src="images/gallery2.jpg" alt="gallery3" />
+                        </figure>
+                    </div>
+                    <div class="col-md-6">
+                        <h5>管弦乐团组建</h5>
+                        <hr/>
+                        <p class="section-top-25">Lorem ipsum dolor sit amet consectetuer Lorem ipsum dolor <br/>adipiscing
+                            elit.. <a href="products.html" class="text-success"> Read more</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 section-top-25">
+                <div class="row">
+                    <div class="col-md-6 section-top-align">
+                        <figure class="imghvr-slide-up img-responsive">
+                            <img src="images/newsroom3.jpg" alt="gallery3" />
+                        </figure>
+                    </div>
+                    <div class="col-md-6">
+                        <h5>专业话剧表演培训</h5>
+                        <hr/>
+                        <p>Lorem ipsum dolor sit amet consectetuer Lorem ipsum dolor <br/>adipiscing elit.. <a href="products.html" class="text-success"> Read more</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 section-top-25">
+                <div class="row">
+                    <div class="col-md-6 section-top-align">
+                        <figure class="imghvr-slide-up img-responsive">
+                            <img src="images/gallery6.jpg" alt="gallery3" />
+                        </figure>
+                    </div>
+                    <div class="col-md-6">
+                        <h5>英国专业戏剧培训</h5>
+                        <hr/>
+                        <p>Lorem ipsum dolor sit amet consectetuer Lorem ipsum dolor <br/>adipiscing elit.. <a href="products.html" class="text-success"> Read more</a></p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -229,69 +210,87 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-6 col-sm-offset-3 m-t-50">
-            <h2 class="heading underline">我们的产品</h2>
-            <p class="text-center">Always keep your portfolio and your risk at your own individual
-                comfortable sleeping point.</p>
+            <h2 class="heading underline">我们的伙伴</h2>
+            <p class="text-center" style="font-size: 13px;">Our Partner</p>
         </div>
     </div>
-    <div class="row section-top-10">
-        <div class="col-sm-6 section-top-25">
-            <div class="row">
-                <div class="col-md-6 section-top-align">
-                    <figure class="imghvr-slide-up img-responsive">
-                        <img src="images/portfolio5.jpg" alt="gallery3" />
-                    </figure>
-                </div>
-                <div class="col-md-6">
-                    <h5>体适能专业培训</h5>
-                    <hr/>
-                    <p>Lorem ipsum dolor sit amet consectetuer Lorem ipsum dolor <br/>adipiscing elit.. <a href="products.html" class="text-success"> Read more</a></p>
-                </div>
-            </div>
+    <div class="row m-t-50">
+        <div class="col-sm-4">
+            <img src="images/home2_slider_layer3.png" alt="img" class="img-responsive center-block">
         </div>
-        <div class="col-sm-6 section-top-25">
-            <div class="row">
-                <div class="col-md-6 section-top-align">
-                    <figure class="imghvr-slide-up img-responsive">
-                        <img src="images/gallery2.jpg" alt="gallery3" />
-                    </figure>
-                </div>
-                <div class="col-md-6">
-                    <h5>管弦乐团组建</h5>
-                    <hr/>
-                    <p class="section-top-25">Lorem ipsum dolor sit amet consectetuer Lorem ipsum dolor <br/>adipiscing
-                        elit.. <a href="products.html" class="text-success"> Read more</a></p>
-                </div>
-            </div>
+        <div class="col-sm-4">
+            <ul class="list-unstyled">
+                <li class="link_transition"><a href="services.html"><i class="fa fa-caret-right"></i><i class="fa fa-caret-right"></i> &nbsp;The a-project way(来自日本的体适能专业培训机构)</a></li>
+                <li class="link_transition  section-top-10"><a href="services.html"><i class="fa fa-caret-right"></i><i class="fa fa-caret-right"></i> &nbsp;台北香颂管弦乐团</a></li>
+                <li class="link_transition  section-top-10"><a href="services.html"><i class="fa fa-caret-right"></i><i class="fa fa-caret-right"></i> &nbsp;White horse theatre(来自英国的专业戏剧培训团)</a></li>
+                <li class="link_transition  section-top-10"><a href="services.html"><i class="fa fa-caret-right"></i><i class="fa fa-caret-right"></i> &nbsp;台北好玩的剧团</a></li>
+            </ul>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6 section-top-25">
-            <div class="row">
-                <div class="col-md-6 section-top-align">
-                    <figure class="imghvr-slide-up img-responsive">
-                        <img src="images/newsroom3.jpg" alt="gallery3" />
-                    </figure>
+        <div class="col-sm-4">
+            <div id="Services_Carousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#Services_Carousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#Services_Carousel" data-slide-to="1"></li>
+                    <li data-target="#Services_Carousel" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="item active" data-interval="3000">
+                        <figure class="imghvr-zoom-in">
+                            <img src="images/gallery2.jpg" alt="people" class="img-responsive">
+                            <figcaption>
+                                <div class="text-center">
+
+                                    <h6 class="text-white"> Web Development</h6>
+                                    <p class="text-white">
+                                        Lorem ipsum dolor sit amet <br/>consectetuer adipiscing elit..
+                                    </p>
+
+                                    <a href="services.html" class="btn btn-success">Read more</a>
+                                </div>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="item" data-interval="3000">
+                        <figure class="imghvr-zoom-in">
+                            <img src="images/portfolio5.jpg" alt="people" class="img-responsive">
+                            <figcaption>
+                                <div class="text-center">
+
+                                    <h6 class="text-white">Big Data & Analytics </h6>
+                                    <p class="text-white">
+                                        Lorem ipsum dolor sit amet <br/>consectetuer adipiscing elit..
+                                    </p>
+                                    <a href="services.html" class="btn btn-success">Read more</a>
+                                </div>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="item" data-interval="3000">
+                        <figure class="imghvr-zoom-in">
+                            <img src="images/newsroom3.jpg" alt="people" class="img-responsive">
+                            <figcaption>
+                                <div class="text-center">
+
+                                    <h6 class="text-white">IT Services </h6>
+                                    <p class="text-white">
+                                        Lorem ipsum dolor sit amet <br/>consectetuer adipiscing elit..
+                                    </p>
+
+                                    <a href="services.html" class="btn btn-success">Read more</a>
+                                </div>
+                            </figcaption>
+                        </figure>
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <h5>专业话剧表演培训</h5>
-                    <hr/>
-                    <p>Lorem ipsum dolor sit amet consectetuer Lorem ipsum dolor <br/>adipiscing elit.. <a href="products.html" class="text-success"> Read more</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 section-top-25">
-            <div class="row">
-                <div class="col-md-6 section-top-align">
-                    <figure class="imghvr-slide-up img-responsive">
-                        <img src="images/gallery6.jpg" alt="gallery3" />
-                    </figure>
-                </div>
-                <div class="col-md-6">
-                    <h5>英国专业戏剧培训</h5>
-                    <hr/>
-                    <p>Lorem ipsum dolor sit amet consectetuer Lorem ipsum dolor <br/>adipiscing elit.. <a href="products.html" class="text-success"> Read more</a></p>
-                </div>
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#Services_Carousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#Services_Carousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
     </div>
@@ -301,9 +300,8 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3 m-t-50">
-                <h2 class="text-white heading2 underline2 text-center">我们的团队</h2>
-                <p class="text-center text-white">We're building a great company, and we're very excited
-                    about the future of the company.</p>
+                <h2 class="text-white heading2 underline2 text-center" style="font-size: 32px;">我们的团队</h2>
+                <p class="text-center text-white" style="font-size: 13px;">Our Team</p>
 
             </div>
         </div>
