--- a/services.html
+++ b/services.html
@@ -69,126 +69,44 @@
     <div class="row">
         <div class="col-sm-6 col-sm-offset-3 m-t-50">
             <h2 class="heading underline">合作伙伴</h2>
+            <p class="text-center">Our Partner</p>
             <p class="text-left">　　作为一个国际性质的专业文化传播公司，迈威为孩子提供针对性，多样化，专业化，系统化的长期培训。我们把身体素质，专业技能，文化传播等多样对未来孩子的发展必不可少的因素作为公司的核心价值，致力于将您的孩子培养成为德智体美全面发展的精英。<br>　　迈威作为一个国际文化传播公司，与多国机构合作，打造了诸多国内外文化交流研学游学活动，包括中国，欧洲，美洲，澳洲，东南亚等多国，让在孩子领略世界魅力的同时学习到知识！</p>
         </div>
     </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-sm-6  col-sm-offset-3 m-t-50">
-            <h2 class="heading underline text-center">Our Projects</h2>
-            <p class="text-center">We're building a great company, and we're very excited about the future of the
-                company.</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class=" col-xs-12">
-
-
-            <div id="filters" class=" section-top-25">
-                <ul class="nav nav-pills">
-                    <li data-filter="*"><a href="javascript:void(0)" class="section-top-align active1 ">All</a></li>
-                    <li data-filter=".awards"><a href="javascript:void(0)" class="section-top-align">Mobile
-                        Development</a></li>
-                    <li data-filter=".clients"><a href="javascript:void(0)" class="section-top-align">Automation</a>
-                    </li>
-                    <li data-filter=".products"><a href="javascript:void(0)" class="section-top-align">Web
-                        Development</a></li>
-                </ul>
+<section class="careers_bg parallax m-t-50 section-bottom-pad-40">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-3 m-t-50">
+                <h2 class="heading2 underline2 text-center text-white">Current Jobs</h2>
+                <p class="text-center text-white">Communication - the human connection - is the key to personal and
+                    career success.</p>
             </div>
         </div>
-    </div>
-    <div id="portfolio" class="row no-gutter section-top-25">
-        <div class="isotope-item awards col-sm-6 col-md-4 section-top-25">
-            <div class="row">
-                <div class="col-xs-12">
-                    <figure class="imghvr-slide-up img-responsive">
-                        <img src="images/portfolio1.jpg" alt="gallery3">
-                        <figcaption>
-                            <div class="text-center hoveicon_plus">
-                                <a href="#"><i class="fa fa-plus-circle fa-2x text-white" aria-hidden="true"></i></a>
+        <div class="row">
+            <div class="col-sm-7 m-t-50 careers">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="careers_border_top">
+                            <div class="row">
+                                <div class="col-xs-2  section-top-15 section-bottom-15">
+                                    <img src="images/html.png" class="img-responsive" alt="html-icon">
+                                </div>
+                                <div class="col-xs-10">
+                                    <h4><a href="apply_job.html">HTML developer ( Fresher )</a></h4>
+                                    <p class="text-white">Last Date to Apply: &nbsp;24.03.2017 &nbsp;&nbsp; | &nbsp; <i
+                                            class="fa fa-money" aria-hidden="true"></i> &nbsp; $ 450 Per Month </p>
+                                </div>
                             </div>
-                        </figcaption>
-                    </figure>
-                </div>
-            </div>
-        </div>
-        <div class="isotope-item products col-sm-6 col-md-4 section-top-25">
-            <div class="row">
-                <div class="col-xs-12">
-                    <figure class="imghvr-slide-up img-responsive">
-                        <img src="images/newsroom3.jpg" alt="gallery3">
-                        <figcaption>
-                            <div class="text-center hoveicon_plus">
-                                <a href="#"><i class="fa fa-plus-circle fa-2x text-white" aria-hidden="true"></i></a>
-                            </div>
-                        </figcaption>
-                    </figure>
-                </div>
-            </div>
-        </div>
-        <div class="clearfix visible-md-block visible-xs-block visible-lg-block"></div>
-        <div class="isotope-item clients col-sm-6 col-md-4 section-top-25 ">
-            <div class="row">
-                <div class="col-xs-12">
-                    <figure class="imghvr-slide-up img-responsive">
-                        <img src="images/portfolio6.jpg" alt="gallery3">
-                        <figcaption>
-                            <div class="text-center hoveicon_plus">
-                                <a href="#"><i class="fa fa-plus-circle fa-2x text-white" aria-hidden="true"></i></a>
-                            </div>
-                        </figcaption>
-                    </figure>
-                </div>
-            </div>
-        </div>
-        <div class="clearfix visible-sm-block "></div>
-        <div class="isotope-item clients col-sm-6 col-md-4 section-top-25">
-            <div class="row   ">
-                <div class="col-xs-12">
-                    <figure class="imghvr-slide-up img-responsive">
-                        <img src="images/portfolio5.jpg" alt="gallery3">
-                        <figcaption>
-                            <div class="text-center hoveicon_plus">
-                                <a href="#"><i class="fa fa-plus-circle fa-2x text-white" aria-hidden="true"></i></a>
-                            </div>
-                        </figcaption>
-                    </figure>
-                </div>
-            </div>
-        </div>
-        <div class="isotope-item awards col-sm-6 col-md-4 section-top-25">
-            <div class="row ">
-                <div class="col-xs-12  ">
-                    <figure class="imghvr-slide-up img-responsive">
-                        <img src="images/portfolio7.jpg" alt="gallery3">
-                        <figcaption>
-                            <div class="text-center hoveicon_plus">
-                                <a href="#"><i class="fa fa-plus-circle fa-2x text-white" aria-hidden="true"></i></a>
-                            </div>
-                        </figcaption>
-                    </figure>
-                </div>
-            </div>
-        </div>
-        <div class="clearfix visible-md-block visible-xs-block visible-lg-block"></div>
-        <div class="isotope-item products col-sm-6 col-md-4 section-top-25">
-            <div class="row">
-                <div class="col-xs-12  ">
-                    <figure class="imghvr-slide-up img-responsive">
-                        <img src="images/portfolio1.jpg" alt="gallery3">
-                        <figcaption>
-                            <div class="text-center hoveicon_plus">
-                                <a href="#"><i class="fa fa-plus-circle fa-2x text-white" aria-hidden="true"></i></a>
-                            </div>
-                        </figcaption>
-                    </figure>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    <br/>
+</section>
 
 <div class="shape section-top-50"></div>
 
