--- a/products.html
+++ b/products.html
@@ -66,177 +66,150 @@
     </div>
 </header>
 
-<div class="container">
-    <div class="row wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.2s">
-        <div class="col-sm-6 col-sm-offset-3 m-t-50">
-            <h2 class="heading underline">产品介绍</h2>
-            <p class="text-center">
-                Sed ut perspiciatis unde omnis iste natus error sitvoluptatem accusantium doloremque
-                laudantium.
-            </p>
+<div class="blog" id="blog">
+    <div class="container">
+        <div class="row wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.2s">
+            <div class="col-sm-6 col-sm-offset-3 m-t-50">
+                <h2 class="heading underline">产品介绍</h2>
+                <p class="text-center" style="font-size: 13px;">Our Products</p>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12 section-top-30">
-            <h4 class=" heading_left underline_left">Mobile Development</h4>
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="col-md-4">
-            <div class="swiper-container Products_page_swiper section-top-align">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <img src="images/mobile1.jpg" class="img-responsive" alt="image-missing">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="images/android1.jpg" class="img-responsive" alt="image-missing">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="images/productsswipperimg.jpg" class="img-responsive" alt="image-missing">
-                    </div>
+        <div class="row">
+            <div class="col-md-12 section-top-30">
+                <h4 class=" heading_left underline_left">日本体适能训练</h4>
+            </div>
+        </div>
+
+        <div class="agile_inner_w3ls-grids">
+
+            <div class="col-sm-6 w3-agile-post-grids">
+                <div class="w3-agile-post-img w3-agile-post-img1">
+                    <a href="#" data-toggle="modal" data-target="#myModal"></a>
+                </div>
+                <div class="w3-agile-post-info">
+                    <h4><a href="#" data-toggle="modal" data-target="#myModal">molestie dignissim</a></h4>
+                    <p>Suspendisse in nisl at ipsum molestie dignissim. Pellentesque est nisi, blandit eget aliquam sed,
+                        Quisque ut risus eget libero finibus facilisis. Phasellus tempus hendrerit sem ut iaculis. consequat nec
+                        risus.</p>
                 </div>
             </div>
-            <br/>
-            <p class="text-justify section-top-10 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.2s"> Lorem
-                ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-                nonummy nibh
-                euismod tincidunt ut laoreet euismod tincidunt ut laoreet.</p>
-            <p class="text-justify wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.2s"> Dolore magna aliquam
-                erat volutpat ut wisi enim ad minim veniam.....
-                <a href="#" class="text-success">Read More</a>
-            </p>
-        </div>
-        <div class="col-md-4 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.2s">
-            <h5>Android Development</h5>
-            <p class="text-justify section-top-10"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-                nonummy nibh
-                euismod tincidunt ut laoreet euismod tincidunt ut laoreet.</p>
-            <p class="text-justify"> Dolore magna aliquam erat volutpat ut wisi enim ad minim veniam...
-                <a href="#" class="text-success">Read More</a>
-            </p>
-            <h5 class="section-top-25">Windows Application</h5>
-            <p class="text-justify">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                euismod tincidunt ut laoreet euismod tincidunt ut laoreet.</p>
-            <p class="text-justify"> Dolore magna aliquam erat volutpat ut wisi enim ad minim veniam....
-                <a href="#" class="text-success">Read More</a>
-            </p>
-        </div>
-        <div class="col-md-4 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s">
-            <h5>IOS Applications Development</h5>
-            <p class="text-justify"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                euismod tincidunt ut laoreet euismod tincidunt ut laoreet.</p>
-            <p> Dolore magna aliquam erat volutpat ut wisi enim ad minim veniam....
-                <a href="#" class="text-success">Read More</a>
-            </p>
-            <h5 class="section-top-25">BlackBerry Development</h5>
-            <p class="text-justify">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                euismod tincidunt ut laoreet euismod tincidunt ut laoreet.</p>
-            <p class="text-justify"> Dolore magna aliquam erat volutpat ut wisi enim ad minim veniam....
-                <a href="#" class="text-success">Read More</a>
-            </p>
-        </div>
-    </div>
-    <div class="text-center section-top-25">
-        <a class="btn btn-empty home_seemore_btn icon_show">More Products...</a>
-    </div>
-    <div class="second_section">
-        <div class="row">
-            <div class="col-md-12">
-                <h4 class="heading_left underline_left">Web
-                    Development</h4>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 section-top-25 image_alignment">
-                <div class="zoom thumb_zoom">
-                    <img src="images/webdevelopment1.jpg" class="img-responsive" alt="it_service _image">
+            <div class="col-sm-6 w3-agile-post-grids">
+                <div class="w3-agile-post-img w3-agile-post-img2">
+                    <a href="#" data-toggle="modal" data-target="#myModal"></a>
                 </div>
-                <p class="text-justify section-top-25">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                    diam nonummy nibh
-                    euismod tincidunt ut laoreet euismod tincidunt ut laoreet.</p>
-                <p class="text-justify"> Dolore magna aliquam erat volutpat ut wisi enim ad minim veniam....
-                    <a href="#" class="text-success">Read More</a>
-                </p>
+                <div class="w3-agile-post-info">
+                    <h4><a href="#" data-toggle="modal" data-target="#myModal">molestie dignissim</a></h4>
+                    <p>Suspendisse in nisl at ipsum molestie dignissim. Pellentesque est nisi, blandit eget aliquam sed,
+                        Quisque ut risus eget libero finibus facilisis. Phasellus tempus hendrerit sem ut iaculis. consequat nec
+                        risus.</p>
+                </div>
             </div>
-            <div class="section-top-10 col-md-4">
-                <h5>Web Design</h5>
-                <p class="text-justify"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                    euismod tincidunt ut laoreet euismod tincidunt ut laoreet.</p>
-                <p class="text-justify"> Dolore magna aliquam erat volutpat ut wisi enim ad minim veniam....
-                    <a href="#" class="text-success">Read More</a>
-                </p>
-                <h5 class="section-top-25">Front-End Development</h5>
-                <p class="text-justify">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                    euismod tincidunt ut laoreet euismod tincidunt ut laoreet.</p>
-                <p class="text-justify"> Dolore magna aliquam erat volutpat ut wisi enim ad minim veniam....
-                    <a href="#" class="text-success">Read More</a>
-                </p>
+            <div class="clearfix"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 section-top-30">
+                <h4 class=" heading_left underline_left">管弦乐团组建</h4>
             </div>
-            <div class="section-top-10 col-md-4">
-                <h5>Applications Development</h5>
-                <p class="text-justify"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                    euismod tincidunt ut laoreet euismod tincidunt ut laoreet.</p>
-                <p class="text-justify"> Dolore magna aliquam erat volutpat ut wisi enim ad minim veniam.....
-                    <a href="#" class="text-success">Read More</a>
-                </p>
-                <h5 class="section-top-25">Back-End Development</h5>
-                <p class="text-justify">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                    euismod tincidunt ut laoreet euismod tincidunt ut laoreet.</p>
-                <p class="text-justify"> Dolore magna aliquam erat volutpat ut wisi enim ad minim veniam.....
-                    <a href="#" class="text-success">Read More</a>
-                </p>
+        </div>
+
+        <div class="agile_inner_w3ls-grids">
+
+            <div class="col-sm-6 w3-agile-post-grids">
+                <div class="w3-agile-post-img w3-agile-post-img1">
+                    <a href="#" data-toggle="modal" data-target="#myModal"></a>
+                </div>
+                <div class="w3-agile-post-info">
+                    <h4><a href="#" data-toggle="modal" data-target="#myModal">molestie dignissim</a></h4>
+                    <p>Suspendisse in nisl at ipsum molestie dignissim. Pellentesque est nisi, blandit eget aliquam sed,
+                        Quisque ut risus eget libero finibus facilisis. Phasellus tempus hendrerit sem ut iaculis. consequat nec
+                        risus.</p>
+                </div>
             </div>
+            <div class="col-sm-6 w3-agile-post-grids">
+                <div class="w3-agile-post-img w3-agile-post-img2">
+                    <a href="#" data-toggle="modal" data-target="#myModal"></a>
+                </div>
+                <div class="w3-agile-post-info">
+                    <h4><a href="#" data-toggle="modal" data-target="#myModal">molestie dignissim</a></h4>
+                    <p>Suspendisse in nisl at ipsum molestie dignissim. Pellentesque est nisi, blandit eget aliquam sed,
+                        Quisque ut risus eget libero finibus facilisis. Phasellus tempus hendrerit sem ut iaculis. consequat nec
+                        risus.</p>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 section-top-30">
+                <h4 class=" heading_left underline_left">英国专业戏剧培训</h4>
+            </div>
+        </div>
+
+        <div class="agile_inner_w3ls-grids">
+
+            <div class="col-sm-6 w3-agile-post-grids">
+                <div class="w3-agile-post-img w3-agile-post-img1">
+                    <a href="#" data-toggle="modal" data-target="#myModal"></a>
+                </div>
+                <div class="w3-agile-post-info">
+                    <h4><a href="#" data-toggle="modal" data-target="#myModal">molestie dignissim</a></h4>
+                    <p>Suspendisse in nisl at ipsum molestie dignissim. Pellentesque est nisi, blandit eget aliquam sed,
+                        Quisque ut risus eget libero finibus facilisis. Phasellus tempus hendrerit sem ut iaculis. consequat nec
+                        risus.</p>
+                </div>
+            </div>
+            <div class="col-sm-6 w3-agile-post-grids">
+                <div class="w3-agile-post-img w3-agile-post-img2">
+                    <a href="#" data-toggle="modal" data-target="#myModal"></a>
+                </div>
+                <div class="w3-agile-post-info">
+                    <h4><a href="#" data-toggle="modal" data-target="#myModal">molestie dignissim</a></h4>
+                    <p>Suspendisse in nisl at ipsum molestie dignissim. Pellentesque est nisi, blandit eget aliquam sed,
+                        Quisque ut risus eget libero finibus facilisis. Phasellus tempus hendrerit sem ut iaculis. consequat nec
+                        risus.</p>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 section-top-30">
+                <h4 class=" heading_left underline_left">专业话剧表演培训</h4>
+            </div>
+        </div>
+
+        <div class="agile_inner_w3ls-grids">
+
+            <div class="col-sm-6 w3-agile-post-grids">
+                <div class="w3-agile-post-img w3-agile-post-img1">
+                    <a href="#" data-toggle="modal" data-target="#myModal"></a>
+                </div>
+                <div class="w3-agile-post-info">
+                    <h4><a href="#" data-toggle="modal" data-target="#myModal">molestie dignissim</a></h4>
+                    <p>Suspendisse in nisl at ipsum molestie dignissim. Pellentesque est nisi, blandit eget aliquam sed,
+                        Quisque ut risus eget libero finibus facilisis. Phasellus tempus hendrerit sem ut iaculis. consequat nec
+                        risus.</p>
+                </div>
+            </div>
+            <div class="col-sm-6 w3-agile-post-grids">
+                <div class="w3-agile-post-img w3-agile-post-img2">
+                    <a href="#" data-toggle="modal" data-target="#myModal"></a>
+                </div>
+                <div class="w3-agile-post-info">
+                    <h4><a href="#" data-toggle="modal" data-target="#myModal">molestie dignissim</a></h4>
+                    <p>Suspendisse in nisl at ipsum molestie dignissim. Pellentesque est nisi, blandit eget aliquam sed,
+                        Quisque ut risus eget libero finibus facilisis. Phasellus tempus hendrerit sem ut iaculis. consequat nec
+                        risus.</p>
+                </div>
+            </div>
+            <div class="clearfix"></div>
         </div>
     </div>
 </div>
 
-<section class="bg-default m-t-70">
-    <div class="container">
-        <div class="row wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.2s">
-            <div class="col-sm-6 col-sm-offset-3 m-t-50">
-                <h2 class="heading underline">Our Products</h2>
-                <p class="text-center">
-                    Sed ut perspiciatis unde omnis iste natus error sitvoluptatem accusantium doloremque
-                    laudantium.
-                </p>
-            </div>
-        </div>
-        <div class="row section-top-30">
-            <div class="col-md-12 about_carousel">
-                <div class="owl-carousel owl-theme">
-                    <div class="item">
-                        <img src="images/brand1.png" class="img-responsive industry-img" alt="products">
-                    </div>
-                    <div class="item">
-                        <img src="images/brand2.png" class="img-responsive industry-img" alt="products">
-                    </div>
-                    <div class="item">
-                        <img src="images/brand3.png" class="img-responsive industry-img" alt="products">
-                    </div>
-                    <div class="item">
-                        <img src="images/brand2.png" class="img-responsive industry-img" alt="products">
-                    </div>
-                    <div class="item">
-                        <img src="images/brand3.png" class="img-responsive industry-img" alt="products">
-                    </div>
-                    <div class="item">
-                        <img src="images/brand1.png" class="img-responsive industry-img" alt="products">
-                    </div>
-                    <div class="item">
-                        <img src="images/brand2.png" class="img-responsive industry-img" alt="products">
-                    </div>
-                    <div class="item">
-                        <img src="images/brand3.png" class="img-responsive industry-img" alt="products">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="shape section-top-50"></div>
-
-</section>
+<div class="shape section-top-50"></div>
 
 <section class="copy-rights">
     <div class="container ">
